--- a/cms-spa/package.json
+++ b/cms-spa/package.json
@@ -5,7 +5,7 @@
     "angular": "1.5.2",
     "angular-sanitize": "1.5.2",
     "angular-resource": "1.5.2",
-     "angular-ui-router": "^0.2.15",
+    "angular-ui-router": "^0.2.15",
     "jquery": "^2.1.4"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "babel-core": "^6.3.0",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-polyfill": "^6.3.0",
     "babel-preset-es2015": "^6.1.18",
     "core-js": "^1.2.6",
