--- a/cms-spa/package.json
+++ b/cms-spa/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.5.2",
-    "angular-sanitize": "1.5.2",
+    "angular-animate": "^1.5.3",
+    "angular-aria": "^1.5.3",
+    "angular-material": "^1.0.6",
+    "angular-messages": "^1.5.3",
     "angular-resource": "1.5.2",
+    "angular-sanitize": "1.5.2",
     "angular-ui-router": "^0.2.15",
     "jquery": "^2.1.4"
   },
